Changelog
=========

1.0rc3 (unrelease)
------------------
* Changed the attribute formError to formErrors which now  a list of errors 
  instead of a single error. Because it's possilbe to have more then one 
  main erros in a form. Think on invariants for example.

* Changed the formtemplate to display the new formError in an <ul> <li> structure
  instead of the ... tal:replace ... for a single error

1.0rc2 (2010/07/16)
-------------------

* The marker to allow extraction affect as well processing them redisplaying
  values coming from the request.

* DataManager API is exported by default.

* DecoratedAction can be extended. You can provide your own implementation
  with the ``factory`` parameter of the decorator.

1.0rc1 (2010/07/05)
-------------------

* The `ExtractData` method has been splitted in two, with the
  introduction of the `validateData` method, that allows the form to
  override the global form validation process. This lets the
  fields validation at the very same place, and only involves
  the general form validation process.

* Created a new marker subclass for the form modes. This marker class
  defines a boolean allowing or not the extraction of the affected
  component, while the form is processed. Added tests for it.

* Look for entry points ``zeam.form.components`` before adapting items
  into components in collection. This let you register adapters before
  they are used.


1.0b4 (2010/06/22)
------------------

* Now the 'Errors' class can be used as a logical grouping of 'Error'
  and it stacks, in this case. Added tests to demonstrate and fix the
  behavior.


1.0b3 (2010/06/04)
------------------

* Fixed the way the identifiers are generated. Now, empty prefixes are
  no longer generating malformed ids/names. Added tests to fix that
  behavior.


1.0b2 (2010/05/13)
------------------

* Fix a bug in FormData initialization.

* Add a NO_CHANGE marker.


1.0b1 (2010/05/03)
------------------

* Initial release